# duckdb-saneql

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  shell.nix
.github/workflows/: MainDistributionPipeline.yml  linux.yml
docs/: README.md
scripts/: bootstrap-template.py  extension-upload.sh  setup-custom-toolchain.sh
src/: saneql_extension.cpp
src/include/: saneql_extension.hpp
test/nodejs/: saneql_test.js
test/python/: saneql_test.py
test/sql/: saneql.test
